--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 								<button >Записать новое значение</button>
 								<button id="HideButton">Скрыть</button>
 								<button id="createPopup">Показать окно</button>
+							<!-- 	<button >ЭКЗАМЕН</button> -->
 								<iframe
 									         src="./landing/landing.html"
 									         id="frameBeerContent"
@@ -80,8 +81,8 @@
 									         frameborder="no"
 									         sandbox="allow-same-origin allow-scripts"
 									></iframe>
+								<a href="./landing/landing.html" target="_blank">ЭКЗАМЕН</a>
 							</div>
-							<a href="./landing/landing.html" target="_blank">ЭКЗАМЕН</a>
 						</div>
 
 							<div id="calculator">
