--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 			<div class="sideBar">
 				<div id="menuLinks" class="menu">
 					<a href="">Главная</a>
-					<a href="">Новости</a>
-					<a href="">Музыка</a>
-					<a href="">Картинки</a>
-					<a href="">Контакты</a>
+					<a id="exam" href="./landing/landing.html" target="_blank">ЭКЗАМЕН</a>
 				</div>
 					<div class="avatar">
 						<a href="">avatar</a>
@@ -31,7 +28,7 @@
 			
 	<div class="content">
 			<div class="h1_h2">
-				<h1>Бложик-хуежик!</h1>
+				<h1>Просто заголовок!</h1>
 				<h2 id="userName"></h2>
 			</div>
 
@@ -81,7 +78,6 @@
 									         frameborder="no"
 									         sandbox="allow-same-origin allow-scripts"
 									></iframe>
-								<a href="./landing/landing.html" target="_blank">ЭКЗАМЕН</a>
 							</div>
 						</div>
 
@@ -111,7 +107,7 @@
 
 					<div id="Tasks">
 						<h2>Какое любишь ты?</h2>
-						<input id="addTasks" type="comment" placeholder="Ответ пиши сюда"><br>
+						<input id="addTasks" type="comment" placeholder="Ответ пиши сюда" maxlength="25"><br>
 						<input id="buttonTasks" type="submit" value="Оставь отзыв" onclick="addTasks()">
 						<div id="newTasks"></div>
 					</div>
