--- a/landing/landing.html
+++ b/landing/landing.html
@@ -37,8 +37,8 @@
 	        	<div class="author">
 	        		<div id="authorText">Пожалуйста авторизуйтесь</div>
 	        		<div id="authorLogin">
-	        		<input id="login" type="text" name="" placeholder="введите логин" maxlength="10">
-	        		<input id="password" type="password" name="" placeholder="введите пароль" maxlength="10">
+	        		<input id="login" type="text" name="login" required placeholder="введите ваше имя" maxlength="10">
+	        		<input id="password" type="password" name="password" required placeholder="введите пароль" maxlength="10">
 	        		<input id="authorButton" type="submit" name="" onclick="logIn()" onmouseenter="headerMouseEvent(this, true)" onmouseleave="headerMouseEvent(this)">
 	        		</div>
 	        		<div id="answer"></div>
